test/classes/delete-free/borrowed/borrowTempReassign.good
borrowTempReassign.chpl:14: error: Scoped variable would outlive the value it is set to
borrowTempReassign.chpl:14: error: Scoped variable bc reachable after lifetime ends
